--- a/asdcouch/asdcouch/app/couchapp.json
+++ b/asdcouch/asdcouch/app/couchapp.json
@@ -1,4 +1,4 @@
 {
-    "name": "Name of your CouchApp",
-    "description": "CouchApp"
+    "name": "BandMates",
+    "description": "ASD 1307: Project to track musician data"
 }
