--- a/asdcouch/asdcouch/couchapp.rc
+++ b/asdcouch/asdcouch/couchapp.rc
@@ -2,6 +2,9 @@
   "env": {
     "local": {
       "db": "http://127.0.0.1:5984/asdproject"
+    },
+    "cloudant": {
+      "db": "https://Topentormsedsoldissedgen:rfA0jkkYftXH5sWGIDQsQPXC@russg.cloudant.com/asdproject"
     }
   }
 }
